# AsciiFine

./: .gitignore  data.ipynb
tunedgemini/: .env.template  README.md  configure.sh  pyproject.toml  run_fine_tune_eval.py  setup.sh  test_connection.py  test_gemini.py
tunedgemini/tunedgemini/: __init__.py  api_utils.py  cli.py  data_loader.py  data_processing.py  fine_tune.py  finetuning.py  predict_eval.py
tunedgemini/tuning-tasks/: Askii_art_generator.py  newsgroups_classification.py
